--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+  <header id ="home">
+      <h1>Cora Krynick</h1>
+      <nav>
+            <a href = "#home">Home</a>
+            <a href = "about.html">About</a>
+            <a href = "contact.html">Contact</a>
+            <a href = "projects.html">Projects</a>
+      </nav>
+      <h2>Welcome To My Website</h2>
+      <p>Glad to have you here!<br>I am a student at Lambda School! I'm in the Full Sack Web program.<br>Feel free to explore! Make sure to check out my work below!</p>   
+  </header>
+  <div class = "bgImg"></div>
+<section id ="bottomSection">
+    <div class = "projectImages">
+        <img src = "https://images.unsplash.com/photo-1514580426463-fd77dc4d0672?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+        <img src = "https://images.unsplash.com/photo-1435820394963-a15297f976fd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+        <img src = "https://images.unsplash.com/photo-1520509414578-d9cbf09933a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+        <img src = "https://images.unsplash.com/photo-1529310399831-ed472b81d589?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+    </div>
+    <div class = "bottomText">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+</section> 
+<footer>
+    <button href ="contact.html">Contact Me!</button>
+</footer>
 </body>
 </html>
